<resources>
    <string name="app_name">Hospital Bank</string>
    <string name="NavOpen">opening nav Drewer</string>
    <string name="NavClose">closing nav Drewer</string>
    <string name="ConnectionERROR">No Internet Connection</string>
    <string name="demoText">sldbjsd</string>


    <string name="wllcomSign">hello there sign in to continue</string>
    <string name="todo">TODO</string>
    <string name="logout">Logout</string>
    <string name="forget_password">Forget password ?</string>
    <string name="passowrd">Passowrd</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="email">Email</string>
    <string name="give_the_gift_of_life">Give the gift of life</string>
    <string name="donate_blood">donate blood</string>
    <string name="users">Users</string>
    <string name="donors">Donors</string>
    <string name="statistic">Statistic</string>
    <string name="warehouse">warehouse</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="scan_code_to_reception">Scan code to reception</string>
    <string name="donor">Donor</string>
    <string name="blood">Blood</string>
    <string name="address">Address</string>
    <string name="age">Age</string>
    <string name="last_donation">Last Donation</string>
    <string name="remaining_time">Remaining Time</string>
    <string name="sign_in">Sign in</string>
    <string name="please_pick_blood_type">Please Pick Blood type</string>
    <string name="please_choose_blood_type">please choose blood type</string>
    <string name="determine_number_of_blood_bags">determine number of blood bags</string>
    <string name="please_determine_number_of_blood_bags">please determine number of blood bags</string>
    <string name="manual_reception">Manual reception</string>
    <string name="qr_reception">QR reception</string>
    <string name="send_request">send request</string>
    <string name="new_message">new message</string>
</resources>