<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txt_activitysign_connection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:drawableEnd="@drawable/ic_baseline_wifi_off_24"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:text="@string/ConnectionERROR"
        android:textColor="@color/secorange"
        android:textSize="16sp"
        android:visibility="gone" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="130dp"
                android:layout_marginTop="20dp"
                android:elevation="5dp"
                android:src="@drawable/last_logo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bungee"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:text="@string/wllcomSign"
                android:textColor="@color/darkBlue"
                android:textSize="25dp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txt_input_sign_in_email"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txt_input_sign_in_password"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/passowrd"
                        android:inputType="textPassword" />

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:id="@+id/txt_forget_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="right"
                    android:paddingVertical="5dp"
                    android:textStyle="bold"
                    android:text="@string/forget_password"
                    android:textColor="@color/purple_500"
                    android:textSize="14sp"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/btn_sign_in"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_margin="20dp"
                    android:background="@drawable/buttons_background"
                    android:onClick="signIn"
                    android:text="@string/sign_in"
                    android:textColor="@color/white"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/txt_i_have_no_account"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:padding="10dp"
                    android:gravity="center"
                    android:text="I have no account! SIGNUP NOW"
                    android:textColor="@color/red"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:visibility="gone" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>