<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    tools:context=".activity_settings">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:baselineAligned="false"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/adminEmail"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/black"
                    app:boxStrokeColor="@color/purple_500"
                    app:counterEnabled="true"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:hint="@string/email"
                        android:imeOptions="actionDone"
                        android:inputType="textEmailAddress"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:textSize="17sp" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/adminPassword"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:enabled="false"
                    android:textColorHint="@color/black"
                    app:boxStrokeColor="@color/purple_500"
                    app:counterEnabled="true"
                    app:errorEnabled="true"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:hint="@string/passowrd"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:textSize="17sp" />
                </com.google.android.material.textfield.TextInputLayout>


                <ImageButton
                    android:id="@+id/editPassword"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="5dp"
                    android:layout_marginBottom="6dp"
                    android:background="@drawable/editable_icon"
                    android:backgroundTint="@color/purple_500"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_baseline_arrow_drop_down_24" />
            </LinearLayout>

            <!--        confirm from visibility-->
            <LinearLayout
                android:id="@+id/linearNewPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:visibility="gone">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/newPassword"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColorHint="@color/black"
                    app:boxStrokeColor="@color/purple_500"
                    app:counterEnabled="true"
                    app:errorEnabled="true"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:hint="@string/enter_new_password"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:textSize="17sp" />
                </com.google.android.material.textfield.TextInputLayout>


                <ImageButton
                    android:id="@+id/editNewPassword"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="5dp"
                    android:layout_marginBottom="6dp"
                    android:background="@drawable/editable_icon"
                    android:backgroundTint="@color/purple_500"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_edit" />
            </LinearLayout>


            <TextView
                android:id="@+id/txt_forget_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:gravity="right"
                android:paddingVertical="5dp"
                android:text="@string/forget_password"
                android:textColor="@color/purple_500"
                android:textSize="16sp"
                android:visibility="visible" />


        </LinearLayout>

        <Button
            android:id="@+id/btnLogout"
            android:layout_width="120dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_marginTop="260dp"



            android:fontFamily="sans-serif-medium"
            android:padding="15dp"
            android:text="@string/logout"
            android:textColor="@color/white"
            android:textSize="22sp" />
    </LinearLayout>

</androidx.core.widget.NestedScrollView>