<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".Fragments.fragment_home">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_wave_haikei__2_">

        <LinearLayout
            android:id="@+id/linearDetials"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:orientation="vertical"
            android:paddingVertical="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/baloo_da"
                    android:text="@string/give_the_gift_of_life"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="casual"
                    android:gravity="center_horizontal"
                    android:text="@string/donate_blood"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="25sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:paddingHorizontal="10dp"
                tools:ignore="UselessParent">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_user"
                        android:contentDescription="TODO" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        tools:ignore="UselessParent">

                        <TextView
                            android:id="@+id/txtRequest"
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:fontFamily="@font/sarpanch_extrabold"
                            android:gravity="center"
                            android:singleLine="true"
                            android:text="0"
                            android:textColor="@color/white"
                            android:textSize="35sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_marginBottom="10dp"
                            android:layout_weight="1"
                            android:fontFamily="@font/sarpanch_extrabold"
                            android:gravity="center"
                            android:text="@string/users"
                            android:textColor="@color/white"
                            android:textSize="20sp" />
                    </LinearLayout>

                </LinearLayout>

                <View
                    android:layout_width="3dp"
                    android:layout_height="90dp"
                    android:layout_marginHorizontal="20dp"
                    android:background="@color/white" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_baseline_task_alt_24"
                        android:contentDescription="TODO" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        tools:ignore="UselessParent">

                        <TextView
                            android:id="@+id/txtDonner"
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:fontFamily="@font/sarpanch_extrabold"
                            android:gravity="center"
                            android:singleLine="true"
                            android:text="0"
                            android:textColor="@color/white"
                            android:textSize="35sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_marginBottom="10dp"
                            android:layout_weight="1"
                            android:fontFamily="@font/baloo_da"
                            android:gravity="center"
                            android:text="@string/donors"
                            android:textColor="@color/white"
                            android:textSize="20sp" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearCards"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@color/white"
            android:orientation="vertical"
            android:paddingHorizontal="5dp"
            android:paddingVertical="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearDetials"
            app:layout_constraintVertical_bias="0.500">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:ignore="UselessParent">

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_statistics"
                    android:layout_width="0dp"
                    android:layout_height="110dp"
                    android:layout_marginHorizontal="5dp"
                    android:layout_weight="1"
                    android:background="#C8CACACA"
                    app:cardBackgroundColor="#A21D2A"
                    app:cardElevation="8dp"
                    app:contentPadding="10dp">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center_horizontal|top"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/ic_chart" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="5dp"
                        android:fontFamily="@font/quicksand_medium"
                        android:gravity="center_horizontal|bottom"
                        android:text="@string/statistic"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_warehouse"
                    android:layout_width="0dp"
                    android:layout_height="110dp"
                    android:layout_marginHorizontal="5dp"
                    android:layout_weight="1"
                    app:cardBackgroundColor="#A21D2A"
                    app:cardElevation="8dp"
                    app:contentPadding="10dp">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center_horizontal|top"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/ic_storage" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="5dp"
                        android:fontFamily="@font/quicksand_medium"
                        android:gravity="center_horizontal|bottom"
                        android:text="@string/warehouse"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="horizontal"
                tools:ignore="UselessParent">

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_history"
                    android:layout_width="0dp"
                    android:layout_height="110dp"
                    android:layout_marginHorizontal="5dp"
                    android:layout_weight="1"
                    app:cardBackgroundColor="#A21D2A"
                    app:cardElevation="8dp"
                    app:contentPadding="10dp">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center_horizontal|top"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/ic_history" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="5dp"
                        android:fontFamily="@font/quicksand_medium"
                        android:gravity="center_horizontal|bottom"
                        android:text="@string/history"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_settings"
                    android:layout_width="0dp"
                    android:layout_height="110dp"
                    android:layout_marginHorizontal="5dp"
                    android:layout_weight="1"
                    app:cardBackgroundColor="#A21D2A"
                    app:cardElevation="8dp"
                    app:contentPadding="10dp">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center_horizontal|top"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/ic_baseline_online_prediction_24" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="5dp"
                        android:fontFamily="@font/quicksand_medium"
                        android:gravity="center_horizontal|bottom"
                        android:text="Predict"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </androidx.cardview.widget.CardView>

            </LinearLayout>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>